ex6/testdata/typechecker/error/BinopTest-err10.java
class BinopTest {
	public static void main(String[] a){
            boolean b;
            b = 67 && true; // TE
	}
}

